Data for forum fix

--- a/cli/src/app/features/forum/components/forum-layout/forum-layout.component.html
+++ b/cli/src/app/features/forum/components/forum-layout/forum-layout.component.html
@@ -271,7 +271,7 @@
                 <div
                   class="w-10 h-10 bg-gradient-to-r from-blue-500 to-purple-600 rounded-full flex items-center justify-center text-white font-medium text-sm"
                 >
-                  {{ getUserInitials(post.author) }}
+                  {{ getUserInitials(getAuthorName(post.author)) }}
                 </div>
               </div>
 
