--- a/cli/src/app/features/chat/components/friend-requests/friend-requests.component.html
+++ b/cli/src/app/features/chat/components/friend-requests/friend-requests.component.html
@@ -69,7 +69,7 @@
     </div>
 
     <!-- Received Requests List -->
-    <div *ngIf="pendingRequests.length > 0" class="space-y-3">
+    <div *ngIf="pendingRequests.length > 0" class="space-y-3 max-h-96 overflow-y-auto scrollable-list">
       <div 
         *ngFor="let request of pendingRequests" 
         class="request-item p-4 bg-gradient-to-r from-blue-50 to-purple-50 dark:from-blue-900/20 dark:to-purple-900/20 rounded-lg border border-blue-200 dark:border-blue-800"
@@ -131,7 +131,7 @@
     </div>
 
     <!-- Sent Requests List -->
-    <div *ngIf="sentRequests.length > 0" class="space-y-3">
+    <div *ngIf="sentRequests.length > 0" class="space-y-3 max-h-96 overflow-y-auto scrollable-list">
       <div 
         *ngFor="let request of sentRequests" 
         class="request-item p-4 bg-gradient-to-r from-yellow-50 to-orange-50 dark:from-yellow-900/20 dark:to-orange-900/20 rounded-lg border border-yellow-200 dark:border-yellow-800"
